# Comprehensive-practice

./: .gitignore  README.md  bone_data.npy  data.npy  data.py.npy  main.py  matlab.mat
trial_4/AI-EXPRESS-master/output/xproto/tutorials/: CMakeLists.txt
trial_4/AI-EXPRESS-master/output/xstream/tutorials/stage10/: CMakeLists.txt  README.md  main.cc
trial_4/AI-EXPRESS-master/output/xstream/tutorials/stage10/config/: workflow.json
trial_4/AI-EXPRESS-master/output/xstream/tutorials/stage10/method/Mobilenetv2PostProcessMethod/: mobilenetv2_post_process_method.cc  mobilenetv2_post_process_method.h
trial_4/AI-EXPRESS-master/output/xstream/tutorials/stage10/method/Mobilenetv2PredictMethod/: mobilenetv2_predict_method.cc  mobilenetv2_predict_method.h
trial_4/AI-EXPRESS-master/source/common/xproto/framework/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xproto/framework/src/message/pluginflow/: msg_registry.cpp
trial_4/AI-EXPRESS-master/source/common/xproto/framework/src/plugin/: xpluginasync.cpp
trial_4/AI-EXPRESS-master/source/common/xproto/framework/tutorials/stage1/: stage1_sample_plugin.cpp
trial_4/AI-EXPRESS-master/source/common/xproto/framework/tutorials/stage3/: stage3_sample_plugin.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/benchmark/: benchmark_main.cc
trial_4/AI-EXPRESS-master/source/common/xstream/framework/benchmark/method/: passthrough_method.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/example/bbox_filter/src/: bbox_filter_main.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/include/hobotxstream/: method_manager.h  node.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/include/hobotxstream/hobotsdk/: ThreadSafeMethod.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/DnnAsyncData/: DnnAsyncData.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/DnnPostProcessMethod/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/DnnPostProcessMethod/src/: DnnPostProcessMethod.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/DnnPredictMethod/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/DnnPredictMethod/src/: DnnPredictMethod.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/methods/dnn_util/include/: dnn_util.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/src/: method.cpp  method_manager.cpp  node.cpp  profiler.cpp  simple_method.cpp  xstream.cpp  xstream_config.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/test/: CMakeLists.txt  cpp_api_test.cc  method_init_test.cpp  subworkflow_test.cpp  thread_priority_test.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/test/include/: MultiSourceTestMethod.h  OrderTestMethod.h  ScrambleOrderMethod.h  passthroughMethod.h  threadSafeMethod.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/test/include/method/: bbox_filter.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/test/src/method/: bbox_filter.cpp
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/: CMakeLists.txt  README.md
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage1/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage1/method/: bbox_filter.h
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage10/config/: vio_config.json
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage10/method/: method_factory.cc
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage2/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage6/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/common/xstream/framework/tutorials/stage6/src/: main.cc
trial_4/AI-EXPRESS-master/source/solution_zoo/common/xproto_plugins/alsadevice/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/xstream/methods/APAFullimgMultitaskPredictMethod/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/xstream/methods/MultitaskPostProcessMethod/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/xstream/methods/MultitaskPostProcessMethod/src/: MultitaskPostProcessMethod.cpp
trial_4/AI-EXPRESS-master/source/solution_zoo/xstream/methods/VehicleTypePostProcessMethod/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/xstream/methods/VehicleTypePostProcessMethod/src/: VehicleTypePostProcessMethod.cpp
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/: CMakeLists.txt  main.cpp  method_factory.cpp
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleSmartPlugin/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleSmartPlugin/include/: ExampleSmartPlugin.h
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleSmartPlugin/src/: ExampleSmartPlugin.cpp
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleWebsocketPlugin/: CMakeLists.txt
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleWebsocketPlugin/include/: ExampleWebsocketPlugin.h
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/ExampleWebsocketPlugin/src/: ExampleWebsocketPlugin.cpp
trial_4/AI-EXPRESS-master/source/solution_zoo/yolov3_mobilenetv2_example/configs/: solution_yolov3.json  yolov3_post_process_method_12M.json
关键上板代码/trial_4/source/solution_zoo/xstream/methods/APAFullimgMultitaskPostProcessMethod/: CMakeLists.txt
关键上板代码/trial_4/source/solution_zoo/xstream/methods/APAFullimgMultitaskPostProcessMethod/src/: APAFullimgMultitaskPostProcessMethod.cc
关键上板代码/trial_4/source/solution_zoo/xstream/methods/RectInputPredictMethod/: CMakeLists.txt
关键上板代码/trial_4/source/solution_zoo/xstream/methods/RectInputPredictMethod/src/: RectInputPredictMethod.cpp
(+1678 files in other folders)
